[Update] - Criado menu colapsível usando js - Modificada folha de estilo para o novo menu e criada pasta js

--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,14 @@ body {
         nav a:hover {
             text-decoration: underline;
         }
+        .projects{
+            text-align: center;
+        }
+        /* .projects__list{
+            
+            justify-content: space-between;
+            padding: 0 20px;
+        } */
         .projects ul {
             list-style: none;
             padding-left: 0;
@@ -53,6 +61,7 @@ body {
             margin-bottom: 1rem;
             padding-bottom: 0.5rem;
             border-bottom: 1px solid #eee;
+            
         }
         .projects a {
             color: #24292f;
@@ -60,6 +69,22 @@ body {
         }
         .projects a:hover {
             color: #0366d6;
+        }
+
+        .collapsible{
+            cursor: pointer;
+            padding: 18px;
+            text-align: left;
+            outline: none;
+        }
+        .active,.collapsible:hover{
+            background-color: #555;
+        }
+        .content{
+            padding: 0 18px;
+            display: none;
+            overflow: hidden;
+            background-color: #f1f1f1;
         }
         @media (max-width: 600px) {
             main {
